// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextAreaInput /> should have some hintText 1`] = `
<div
  class="base width_full"
>
  <div
    class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="base width_full height_full"
    >
      <textarea
        autocomplete="off"
        class="base base display_flex width_full position_relative types_textarea_base input_itself_root_base"
        id="id"
      />
    </div>
    <div
      class="base display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_base root_base sizes_4_base colours_neutral_base noWrap base root_base colours_muted_base base placeholderPlacement_default_base"
          for="id"
        >
          placeholder
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
  <p
    class="base textAlign_left root_base sizes_2_base fontWeight_normal_base base base 2_mobile_base 4_mobile_base hintText_base styleNode_base"
  >
    hint text
  </p>
</div>
`;

exports[`<TextAreaInput /> should match snapshot 1`] = `
<div
  class="base width_full"
>
  <div
    class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="base width_full height_full"
    >
      <textarea
        autocomplete="off"
        class="base base display_flex width_full position_relative types_textarea_base input_itself_root_base"
        id="id"
      />
    </div>
    <div
      class="base display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_base root_base sizes_4_base colours_neutral_base noWrap base root_base colours_muted_base base placeholderPlacement_default_base"
          for="id"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when active 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="base width_full height_full"
    >
      <textarea
        autocomplete="off"
        class="base base display_flex width_full position_relative types_textarea_base input_itself_root_base"
      >
        value from the tests
      </textarea>
    </div>
    <div
      class="base display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base activeBorderColour_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base activeBorderColour_base"
        style="width: 16px;"
      >
        <label
          class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_base activeColour_base root_base sizes_4_base colours_neutral_base noWrap base placeholderPlacement_shifted_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base activeBorderColour_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when touched 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="base width_full height_full"
    >
      <textarea
        autocomplete="off"
        class="base base display_flex width_full position_relative types_textarea_base input_itself_root_base"
      />
    </div>
    <div
      class="base display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_base root_base sizes_4_base colours_neutral_base noWrap base root_base colours_muted_base base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="base width_full height_full"
    >
      <textarea
        autocomplete="off"
        class="base base display_flex width_full position_relative types_textarea_base input_itself_root_base"
      />
    </div>
    <div
      class="base display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_base root_base sizes_4_base colours_neutral_base noWrap base root_base colours_muted_base base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should match snapshot when touched and valid 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="base width_full height_full"
    >
      <textarea
        autocomplete="off"
        class="base base display_flex width_full position_relative types_textarea_base input_itself_root_base"
      />
    </div>
    <div
      class="base display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_base root_base sizes_4_base colours_neutral_base noWrap base root_base colours_muted_base base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;
